--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div id="root">
-        <h1 v-for="(email, index) in emailContainer">{{ email }}</h1>
+        <h1 v-for="(email) in arrayFilled">{{ email }}</h1>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
